# passline

./: README.md  pyproject.toml
datasets/: qb.parquet  qb_X_test.parquet  qb_X_train.parquet  qb_test_true_pred.parquet
models/: qb_poisson_model.skops
notebooks/: cross_validation.ipynb  preprocess_engineer_features.ipynb  simulations.ipynb
scripts/: app.py  weather.py
utils/: nfl_utils.py
